tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__edit_record_test__edit_record_custom_datetime.snap
---
source: tests/snapshot_tests/screens/edit_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Edit Password                                                   Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ Login ▼ ]                                                      │"
"│                                                                              │"
"│  Name       [Expiring Login                                    ] ← Required  │"
"│                                                                              │"
"│  URL        [                                                  ] ← Optional  │"
"│                                                                              │"
"│  Username   [                                                  ] ← Required  │"
"│                                                                              │"
"│  Password   [                             ] [ Generate ] [ Show ] [ Copy ]   │"
"│                                                                              │"
"│  Strength:  (strength shown after password entry)                            │"
"│                                                                              │"
"│  Expiry     [ Custom ▼ ]                                                     │"
"│              [2026-12-31]                                                    │"
"│              YYYY-MM-DD                                                      │"
"│                                                                              │"
"│  Tags       [                    ]  Enter Add  ←/→ Select  Del Delete        │"
"│                                                                              │"
"│  Notes       ← Optional                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
