tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__edit_record_test__edit_record_embedded_generator.snap
---
source: tests/snapshot_tests/screens/edit_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Edit Password                                                   Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│       ┌──────────────────────────────────────────────────────────────┐       │"
"│  Type │  Password Generator                                Esc Cancel│       │"
"│       │──────────────────────────────────────────────────────────────│       │"
"│  Name │                                                              │uired  │"
"│       │  Length [ 16 ]  [-] ██████░░░░░░░░░░░░░░ [+]                 │       │"
"│  URL  │                                                              │ional  │"
"│       │  [✓] Uppercase  [✓] Lowercase  [✓] Digits  [✓] Symbols       │       │"
"│  Usern│────────────────────────────────────────────────────────────  │uired  │"
"│       │  ┌────────────────────────────────────────────────────────┐  │       │"
"│  Passw│  │ CorrectHorse42!                                        │  │py ]   │"
"│       │  └────────────────────────────────────────────────────────┘  │       │"
"│  Stren│                                                              │       │"
"│       │  Strength: ████████████░░░░ Strong                           │       │"
"│  Expir│────────────────────────────────────────────────────────────  │       │"
"│       │                                                              │       │"
"│  Tags │  [ Regenerate(r) ]        [ Use Password(y) ]                │       │"
"│       └──────────────────────────────────────────────────────────────┘       │"
"│  Notes       ← Optional                                                      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
