tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__edit_record_test__edit_record_tag_autocomplete.snap
---
source: tests/snapshot_tests/screens/edit_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Edit Password                                         Esc Cancel            │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type [ Login ▼ ]                                                            │"
"│                                                                              │"
"│  Name [GitHub Account                                                        │"
"│ ] ← Required                                                                 │"
"│                                                                              │"
"│  URL [                                                                       │"
"│ ] ← Optional                                                                 │"
"│                                                                              │"
"│  Username [                                                                  │"
"│ ] ← Required                                                                 │"
"│                                                                              │"
"│  Password [                                ] [ Generate ] [ Show ] [ Copy ]  │"
"│  Strength: (strength shown after password entry)                             │"
"│                                                                              │"
"│  Expiry [ Never ▼ ]                                                          │"
"│                                                                              │"
"│  Tags [fi                  ]                                                 │"
"│         finance                                                              │"
"│         firewall                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
