tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__edit_record_test__edit_record_validation_errors.snap
---
source: tests/snapshot_tests/screens/edit_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Edit Password                                                   Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ Login ▼ ]                                                      │"
"│                                                                              │"
"│  Name       [                                                  ] ← Required  │"
"│  Title cannot be empty                                                       │"
"│                                                                              │"
"│  URL        [                                                  ] ← Optional  │"
"│                                                                              │"
"│  Username   [                                                  ] ← Required  │"
"│                                                                              │"
"│  Password   [                             ] [ Generate ] [ Show ] [ Copy ]   │"
"│  Password cannot be empty                                                    │"
"│                                                                              │"
"│  Strength:  (strength shown after password entry)                            │"
"│                                                                              │"
"│  Expiry     [ Never ▼ ]                                                      │"
"│                                                                              │"
"│  Tags       [                    ]  Enter Add  ←/→ Select  Del Delete        │"
"│                                                                              │"
"│  Notes       ← Optional                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
