tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__edit_record_test__edit_record_weak_password_dialog.snap
---
source: tests/snapshot_tests/screens/edit_record_test.rs
expression: backend
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  Edit Password                                                   Esc Cancel  │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│  Type       [ Login ▼ ]                                                      │"
"│                                                                              │"
"│  Name       [Legacy Router                                     ] ← Required  │"
"│               ┌──────────────────────────────────────────────┐               │"
"│  URL        [ │  ⚠ Weak Password                             │ ] ← Optional  │"
"│               │──────────────────────────────────────────────│               │"
"│  Username   [ │                                              │ ] ← Required  │"
"│               │  Current password strength is "Weak" and vuln│               │"
"│  Password   [•│                                              │w ] [ Copy ]   │"
"│               │  Consider using the generator to create a str│               │"
"│  Strength:  (s│                                              │               │"
"│               │──────────────────────────────────────────────│               │"
"│  Expiry     [ └──────────────────────────────────────────────┘               │"
"│                                                                              │"
"│  Tags       [                    ]                                           │"
"│                                                                              │"
"│  Notes      [                                                  ] ← Optional  │"
"│                                                                              │"
"│──────────────────────────────────────────────────────────────────────────────│"
"└──────────────────────────────────────────────────────────────────────────────┘"
